FIX - Fixed "invisible" text in input label

--- a/public/css/css-others/auth-popover.css
+++ b/public/css/css-others/auth-popover.css
@@ -23,7 +23,8 @@
 }
 
 .aw-with-input {
-    width: 220px !important
+    width: 220px !important;
+    color: #fff;
     
 }
 
